--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "node-hid": "^1.2.0",
+    "robotjs": "^0.6.0",
     "serialport": "^8.0.7"
   },
   "devDependencies": {
